--- a/PBL1_Monitor.ioc
+++ b/PBL1_Monitor.ioc
@@ -91,6 +91,7 @@ MxCube.Version=6.3.0
 MxDb.Version=DB.6.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:true\:false
+NVIC.EXTI15_10_IRQn=true\:4\:0\:true\:false\:true\:true\:true
 NVIC.EXTI9_5_IRQn=true\:3\:0\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:true\:false
@@ -165,10 +166,10 @@ PC10.GPIO_Label=RST
 PC10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC10.Locked=true
 PC10.Signal=GPIO_Output
-PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=User Blue Button [B1]
+PC13.GPIOParameters=GPIO_ModeDefaultEXTI
+PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC13.Locked=true
-PC13.Signal=GPIO_Input
+PC13.Signal=GPXTI13
 PC14/OSC32_IN.Locked=true
 PC14/OSC32_IN.Mode=LSE-External-Oscillator
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
@@ -390,6 +391,8 @@ RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.ADCx_IN10.0=ADC1_IN10,IN10
 SH.ADCx_IN10.ConfNb=1
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
 SH.GPXTI6.0=GPIO_EXTI6
